--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,108 @@
+
+
+*{
+  margin : 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+html {
+
+  font-size: 62.5%;
+
+}
+body{
+  background : rgb(3, 0, 31);
+   color: white ;
+   font-family: 'Poppins',sans-serif;
+}
+
+
 .App {
+  min-height: 100vh;
+  display: flex;
+
+}
+.sideBar {
+  flex: 3;
+  border-right: 1px solid rgb(100, 100, 100);
+}
+
+.main{
+  flex: 9;
+}
+.logo{
+  margin-right: 1rem ;
+}
+
+.brand {
+  font-size: 2rem;
+}
+.upperSide {
+  padding: 2.5rem;
+  border-bottom: 1px solid rgb(100, 100, 100);
+  height: 70%;
+}
+.upperSideTop{
+  display: flex;
+  align-items: center;
+  margin: 2.5rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +139,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
